update config.json file.

--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wxec30f0e87cf18db8",
-	"projectname": "ape_esoterica",
+	"projectname": "ape-esoterica",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
