--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/pair/pair",
     "pages/home/home",
     "pages/logs/logs",
     "pages/keymap/keymap",
@@ -10,5 +11,25 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+        "color": "#a9b7b7",
+        "selectedColor": "#1296db",
+        "borderStyle": "black",
+        "list": [
+      {
+              "selectedIconPath": "images/team_pressed.png",
+              "iconPath": "images/team.png",
+              "pagePath": "pages/pair/pair",
+              "text": "团队"  
+
+      },
+      {
+              "selectedIconPath": "images/code_pressed.png",
+              "iconPath": "images/code.png",
+              "pagePath": "pages/home/home",
+              "text": "秘籍"  
+      }
+    ]  
   }
 }
